# screenshot-api

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  celery_config.py  docker-compose.yml  easypanel-schema.json  info-painel-easypanel.md  main.py  pyproject.toml  requirements.txt  setup.cfg  start.sh
.github/workflows/: ci.yml  docker-publish.yml
tests/: test_screenshot.py
