[metadata]
name = screenshot-api
version = 1.0.2
description = API para captura de screenshots de páginas web
long_description = file: README.md
long_description_content_type = text/markdown
author = Leandro Bosaipo
author_email = leandrobosaipo@gmail.com
url = https://github.com/leandrobosaipo/screenshot-api
license = MIT
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.11
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find:
python_requires = >=3.11
install_requires =
    fastapi==0.110.0
    uvicorn==0.27.1
    celery==5.3.6
    redis==5.0.1
    playwright==1.42.0
    python-dotenv==1.0.1
    pydantic==2.6.3
    python-multipart==0.0.9
    aiofiles==23.2.1

[options.extras_require]
dev =
    black==24.2.0
    isort==5.13.2
    flake8==7.0.0
    flake8-docstrings==1.7.0
    mypy==1.8.0
    pytest==8.0.0
    pytest-cov==4.1.0
    pre-commit==3.6.0

[flake8]
max-line-length = 88
extend-ignore = E203
exclude = .git,__pycache__,build,dist,venv,env

[isort]
profile = black
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool:pytest]
testpaths = tests
python_files = test_*.py
python_functions = test_*
python_classes = Test*
addopts = -v --cov=screenshot --cov-report=term-missing 